[gd_scene load_steps=62 format=3 uid="uid://c737spwt8n45i"]

[ext_resource type="Script" path="res://scripts/mini_boss_level.gd" id="1_jbkxj"]
[ext_resource type="Script" path="res://scripts/block_area.gd" id="2_1d352"]
[ext_resource type="Texture2D" uid="uid://co0ctq2hcom44" path="res://images/mini_boss/blue/__alien_creature_5_blue_die_000.png" id="3_mowwh"]
[ext_resource type="Texture2D" uid="uid://bmblxt5a1rng0" path="res://images/mini_boss/blue/__alien_creature_5_blue_die_001.png" id="4_evto0"]
[ext_resource type="Texture2D" uid="uid://cj1gvqblj1mj6" path="res://images/mini_boss/blue/__alien_creature_5_blue_die_002.png" id="5_hm37p"]
[ext_resource type="Texture2D" uid="uid://ckndpt3ggw62p" path="res://images/mini_boss/blue/__alien_creature_5_blue_die_003.png" id="6_rkq2r"]
[ext_resource type="Texture2D" uid="uid://mlntfeweeigs" path="res://images/mini_boss/blue/__alien_creature_5_blue_die_004.png" id="7_sg2bv"]
[ext_resource type="Texture2D" uid="uid://kukv6ws7jbob" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_000.png" id="8_7m37j"]
[ext_resource type="Texture2D" uid="uid://dn2mwwwx776wm" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_001.png" id="9_gmdd0"]
[ext_resource type="Texture2D" uid="uid://cllkw13f46dj0" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_002.png" id="10_1kgi1"]
[ext_resource type="Texture2D" uid="uid://bj01c5lome71b" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_003.png" id="11_b4nbn"]
[ext_resource type="Texture2D" uid="uid://bmnff4oloxsvw" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_004.png" id="12_d5tqn"]
[ext_resource type="Texture2D" uid="uid://c71iwqmwq3lm3" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_005.png" id="13_ur468"]
[ext_resource type="Texture2D" uid="uid://dboyou6uerap8" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_006.png" id="14_i8nmq"]
[ext_resource type="Texture2D" uid="uid://bsan7r55oeymt" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_007.png" id="15_45nnp"]
[ext_resource type="Texture2D" uid="uid://dvcy0pyv3groh" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_008.png" id="16_e8aob"]
[ext_resource type="Texture2D" uid="uid://chj5ctj68vsoj" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_009.png" id="17_cbcq4"]
[ext_resource type="Texture2D" uid="uid://eo3o4vw7xfmn" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_010.png" id="18_rg41i"]
[ext_resource type="Texture2D" uid="uid://d1ag0jatnwj6u" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_011.png" id="19_lthvg"]
[ext_resource type="Texture2D" uid="uid://od5jq08breug" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_012.png" id="20_tq2fq"]
[ext_resource type="Texture2D" uid="uid://b6nlrih54kob6" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_013.png" id="21_spngl"]
[ext_resource type="Texture2D" uid="uid://clujb62emtt8w" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_014.png" id="22_cvy6i"]
[ext_resource type="Texture2D" uid="uid://c7tnvqv2wc2oc" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_015.png" id="23_381rm"]
[ext_resource type="Texture2D" uid="uid://uksqn21h8h26" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_016.png" id="24_q67x6"]
[ext_resource type="Texture2D" uid="uid://cvc06wd7mn1qe" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_017.png" id="25_goavi"]
[ext_resource type="Texture2D" uid="uid://cuuaklqae36g2" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_018.png" id="26_7kmva"]
[ext_resource type="Texture2D" uid="uid://bxdi8h1k5xdxv" path="res://images/mini_boss/blue/__alien_creature_5_blue_idle_019.png" id="27_7k6nx"]
[ext_resource type="Texture2D" uid="uid://cguyiu23r1gn0" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_000.png" id="28_0k85g"]
[ext_resource type="Texture2D" uid="uid://bdgqvmpevb63e" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_001.png" id="29_wky15"]
[ext_resource type="Texture2D" uid="uid://bacqf7f2m6jur" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_002.png" id="30_fnken"]
[ext_resource type="Texture2D" uid="uid://d3yuw74bskwrs" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_003.png" id="31_6qgcq"]
[ext_resource type="Texture2D" uid="uid://cg535cwonc1qv" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_004.png" id="32_ansug"]
[ext_resource type="Texture2D" uid="uid://y03rr5udcxc0" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_005.png" id="33_kj6ik"]
[ext_resource type="Texture2D" uid="uid://beh4vhcvlis0k" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_006.png" id="34_se10b"]
[ext_resource type="Texture2D" uid="uid://bqf8pqh3wrdlt" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_007.png" id="35_nc15q"]
[ext_resource type="Texture2D" uid="uid://bj6f4py7wbao3" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_008.png" id="36_37knf"]
[ext_resource type="Texture2D" uid="uid://b1128o27ykm3s" path="res://images/mini_boss/blue/__alien_creature_5_blue_roar_009.png" id="37_cdbdn"]
[ext_resource type="PackedScene" uid="uid://dutqe76oy7gik" path="res://scenes/boss_level_components/boss_level_window.tscn" id="39_xlegr"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/intro_level/quiz_code_pages/quiz_page_topic5.gd" id="40_gwwo3"]
[ext_resource type="FontFile" uid="uid://b47jyqncn0ah1" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Regular.ttf" id="41_k3f6e"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/intro_level/quiz_code_pages/intro_code_page_topic5.gd" id="42_57trt"]
[ext_resource type="FontFile" uid="uid://cwbqlu04cyyvj" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Bold.ttf" id="43_meeg3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cguhy"]
size = Vector2(963, 644)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rqvw"]
size = Vector2(958, 640.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvki5"]
size = Vector2(119.5, 643.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_ebl7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mowwh")
}, {
"duration": 1.0,
"texture": ExtResource("4_evto0")
}, {
"duration": 1.0,
"texture": ExtResource("5_hm37p")
}, {
"duration": 1.0,
"texture": ExtResource("6_rkq2r")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}, {
"duration": 1.0,
"texture": ExtResource("7_sg2bv")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_7m37j")
}, {
"duration": 1.0,
"texture": ExtResource("9_gmdd0")
}, {
"duration": 1.0,
"texture": ExtResource("10_1kgi1")
}, {
"duration": 1.0,
"texture": ExtResource("11_b4nbn")
}, {
"duration": 1.0,
"texture": ExtResource("12_d5tqn")
}, {
"duration": 1.0,
"texture": ExtResource("13_ur468")
}, {
"duration": 1.0,
"texture": ExtResource("14_i8nmq")
}, {
"duration": 1.0,
"texture": ExtResource("15_45nnp")
}, {
"duration": 1.0,
"texture": ExtResource("16_e8aob")
}, {
"duration": 1.0,
"texture": ExtResource("17_cbcq4")
}, {
"duration": 1.0,
"texture": ExtResource("18_rg41i")
}, {
"duration": 1.0,
"texture": ExtResource("19_lthvg")
}, {
"duration": 1.0,
"texture": ExtResource("20_tq2fq")
}, {
"duration": 1.0,
"texture": ExtResource("21_spngl")
}, {
"duration": 1.0,
"texture": ExtResource("22_cvy6i")
}, {
"duration": 1.0,
"texture": ExtResource("23_381rm")
}, {
"duration": 1.0,
"texture": ExtResource("24_q67x6")
}, {
"duration": 1.0,
"texture": ExtResource("25_goavi")
}, {
"duration": 1.0,
"texture": ExtResource("26_7kmva")
}, {
"duration": 1.0,
"texture": ExtResource("27_7k6nx")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"right_answer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_0k85g")
}, {
"duration": 1.0,
"texture": ExtResource("29_wky15")
}, {
"duration": 1.0,
"texture": ExtResource("30_fnken")
}, {
"duration": 1.0,
"texture": ExtResource("31_6qgcq")
}, {
"duration": 1.0,
"texture": ExtResource("32_ansug")
}, {
"duration": 1.0,
"texture": ExtResource("33_kj6ik")
}, {
"duration": 1.0,
"texture": ExtResource("34_se10b")
}, {
"duration": 1.0,
"texture": ExtResource("35_nc15q")
}, {
"duration": 1.0,
"texture": ExtResource("36_37knf")
}, {
"duration": 1.0,
"texture": ExtResource("37_cdbdn")
}],
"loop": false,
"name": &"wrong_answer",
"speed": 8.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_tu174"]
font = ExtResource("43_meeg3")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8g3qe"]
font = ExtResource("41_k3f6e")
font_size = 20
font_color = Color(0.376471, 0.839216, 0.682353, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0svr"]
font = ExtResource("41_k3f6e")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dv4lf"]
font = ExtResource("41_k3f6e")
font_size = 20
font_color = Color(1, 1, 1, 0.984314)

[sub_resource type="Animation" id="Animation_kivbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5hlbm"]
resource_name = "text_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xycbe"]
_data = {
"RESET": SubResource("Animation_kivbn"),
"text_animation": SubResource("Animation_5hlbm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2riv2"]
bg_color = Color(0.376471, 0.839216, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eocmm"]
bg_color = Color(0.376471, 0.839216, 0.682353, 1)

[sub_resource type="Animation" id="Animation_2vdb3"]
length = 0.001

[sub_resource type="Animation" id="Animation_fv11m"]
resource_name = "block_area"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-566, -538), Vector2(-576, -538), Vector2(-556, -538), Vector2(-606, -538), Vector2(-576, -538), Vector2(-566, -538)]
}

[sub_resource type="Animation" id="Animation_j55cl"]
resource_name = "display_window"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwsnv"]
resource_name = "dissolve_window"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bqsxn"]
resource_name = "quiz_to_code"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window/quiz_page:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boss_encounter_area/boss_level_window/intro_code_page:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb8hw"]
_data = {
"RESET": SubResource("Animation_2vdb3"),
"block_area": SubResource("Animation_fv11m"),
"display_window": SubResource("Animation_j55cl"),
"dissolve_window": SubResource("Animation_cwsnv"),
"quiz_to_code": SubResource("Animation_bqsxn")
}

[node name="mini_boss_intro" type="Node2D"]
position = Vector2(567, 589)
script = ExtResource("1_jbkxj")

[node name="block_area" type="StaticBody2D" parent="."]
script = ExtResource("2_1d352")

[node name="area_2d" type="Area2D" parent="block_area"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area/area_2d"]
show_behind_parent = true
position = Vector2(39.5, -267)
shape = SubResource("RectangleShape2D_cguhy")
debug_color = Color(0.992157, 0, 0.278431, 0.0352941)

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area"]
show_behind_parent = true
position = Vector2(40, -266.625)
shape = SubResource("RectangleShape2D_4rqvw")
debug_color = Color(1, 0.243137, 0.27451, 0.341176)

[node name="boss_encounter_area" type="Area2D" parent="."]

[node name="collision_shape_2d" type="CollisionShape2D" parent="boss_encounter_area"]
show_behind_parent = true
position = Vector2(-506.75, -268)
shape = SubResource("RectangleShape2D_uvki5")

[node name="animated_sprite_2d" type="AnimatedSprite2D" parent="boss_encounter_area"]
position = Vector2(374, -91.5)
scale = Vector2(0.510638, 0.575847)
sprite_frames = SubResource("SpriteFrames_ebl7p")
animation = &"idle"
autoplay = "idle"

[node name="boss_level_window" parent="boss_encounter_area" instance=ExtResource("39_xlegr")]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -566.0
offset_top = -538.0
offset_right = 588.0
offset_bottom = 110.0
scale = Vector2(0.8, 0.8)
metadata/_edit_group_ = true

[node name="quiz_page" type="Control" parent="boss_encounter_area/boss_level_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("40_gwwo3")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/quiz_page"]
layout_mode = 0
offset_left = 6.0
offset_right = 1155.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="question_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = 107.0
offset_top = 168.0
offset_right = 1080.0
offset_bottom = 261.0
metadata/_edit_group_ = true

[node name="question_label" type="RichTextLabel" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/question_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("41_k3f6e")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="options_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466132
anchor_top = 0.5
anchor_right = 0.521833
anchor_bottom = 0.5
offset_left = -211.586
offset_top = -150.36
offset_right = 172.414
offset_bottom = 123.64
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
alignment = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="option_button1" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_k3f6e")
theme_override_font_sizes/font_size = 19
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="option_button2" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_k3f6e")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button3" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_k3f6e")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button4" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_k3f6e")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="intro_code_page" type="Control" parent="boss_encounter_area/boss_level_window"]
modulate = Color(1, 1, 1, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("42_57trt")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/intro_code_page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="code_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color"]
clip_contents = true
layout_direction = 1
layout_mode = 2
offset_left = 31.0
offset_top = 44.0
offset_right = 851.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="problem_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="problem_label" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/problem_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
text = "Problem: Determine the discount on an order based on the price."
label_settings = SubResource("LabelSettings_tu174")
clip_text = true

[node name="panel" type="Panel" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="line_num_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 503.0

[node name="line_number" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel/line_num_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 1)
theme_override_font_sizes/font_size = 19
text = "1

2

3

4

5

6

7

8



"
label_settings = SubResource("LabelSettings_8g3qe")

[node name="code_template_conatiner" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 20.0
offset_right = 708.0
offset_bottom = 480.0

[node name="code_template_label" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel/code_template_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Input total

                   total < 50 then
                      
     no discount
    
                   total >= 50 and total < 100 then

    apply 25% discount



    apply 50% discount


    "
label_settings = SubResource("LabelSettings_e0svr")

[node name="player_answer" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 53.0
offset_top = 74.0
offset_right = 154.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("41_k3f6e")
item_count = 3
popup/item_0/text = "if"
popup/item_0/id = 0
popup/item_1/text = "elif"
popup/item_1/id = 1
popup/item_2/text = "else"
popup/item_2/id = 2

[node name="player_answer2" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 55.0
offset_top = 192.0
offset_right = 154.0
offset_bottom = 221.0
theme_override_fonts/font = ExtResource("41_k3f6e")
item_count = 3
popup/item_0/text = "if"
popup/item_0/id = 0
popup/item_1/text = "elif"
popup/item_1/id = 1
popup/item_2/text = "else"
popup/item_2/id = 2

[node name="player_answer3" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 56.0
offset_top = 311.0
offset_right = 176.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("41_k3f6e")
item_count = 3
popup/item_0/text = "if"
popup/item_0/id = 0
popup/item_1/text = "elif"
popup/item_1/id = 1
popup/item_2/text = "else"
popup/item_2/id = 2

[node name="player_answer4" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 58.0
offset_top = 425.0
offset_right = 176.0
offset_bottom = 454.0
theme_override_fonts/font = ExtResource("41_k3f6e")
item_count = 3
popup/item_0/text = "End if"
popup/item_0/id = 0
popup/item_1/text = "End elif"
popup/item_1/id = 1
popup/item_2/text = "End else "
popup/item_2/id = 2

[node name="feedback_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color"]
layout_mode = 2
offset_left = 868.0
offset_top = 98.0
offset_right = 1128.0
offset_bottom = 597.0

[node name="panel_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="panel2" type="Panel" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="feedback_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container/panel2"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 486.0

[node name="feedback_label" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 0.431373)
label_settings = SubResource("LabelSettings_dv4lf")
autowrap_mode = 3

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
root_node = NodePath("../../../../../run_button_conatiner")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_xycbe")
}

[node name="run_button_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color"]
layout_mode = 2
offset_left = 1014.0
offset_top = 50.0
offset_right = 1122.0
offset_bottom = 90.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.09

[node name="run_button" type="Button" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/run_button_conatiner"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("41_k3f6e")
theme_override_styles/normal = SubResource("StyleBoxFlat_2riv2")
text = "Run"

[node name="health_bar" type="ProgressBar" parent="boss_encounter_area/boss_level_window"]
layout_mode = 0
offset_left = 28.0
offset_top = 16.0
offset_right = 302.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_eocmm")

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area"]
process_priority = 2
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_vb8hw")
}

[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button1" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_1_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button2" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_2_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button3" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_3_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button4" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_4_pressed" flags=18]
[connection signal="all_correct" from="boss_encounter_area/boss_level_window/intro_code_page" to="." method="_on_code_page_all_correct"]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/intro_code_page/background_color/run_button_conatiner/run_button" to="boss_encounter_area/boss_level_window/intro_code_page" method="_on_run_button_pressed" flags=18]
